--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.polimuevet.android.Registro"
+            android:label="@string/title_activity_registro" >
+        </activity>
     </application>
 
 </manifest>
