--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,10 +46,15 @@
             android:name="com.polimuevet.android.TripDetail"
             android:label="Detalles del trayecto"
             android:parentActivityName="com.polimuevet.android.Trayectos" >
+
             <!-- Parent activity meta-data to support 4.0 and lower -->
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.polimuevet.android.Trayectos" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.polimuevet.android.Trayectos" />
+        </activity>
+        <activity
+            android:name="com.polimuevet.android.Addtrip"
+            android:label="@string/title_activity_addtrip" >
         </activity>
     </application>
 
