--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,6 +56,10 @@
             android:name="com.polimuevet.android.Addtrip"
             android:label="Nuevo trayecto" >
         </activity>
+        <activity
+            android:name="com.polimuevet.android.HttpNewTrip"
+            android:label="@string/title_activity_http_new_trip" >
+        </activity>
     </application>
 
 </manifest>
